--- a/assets/micro-pages/mother-baby-care.html
+++ b/assets/micro-pages/mother-baby-care.html
@@ -20,7 +20,7 @@
         </div>
 
         <div class="nav-container">
-            <a href="../../index.html"><img src="../images/LOGOS/MEdimix logo.jpeg" alt="Medmix Logo" class="logo-img"></a>>
+            <a href="../../index.html"><img src="../images/LOGOS/MEdimix logo.jpeg" alt="Medmix Logo" class="logo-img"></a>
             <div class="menu-toggle" onclick="toggleMenu()">☰</div>
              <nav>
                 <ul>
