--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
     <header>
       <div class="top-bar">
         <div class="top-bar-contact">
-          <span>✉ medmixprivatelimited@gmail.com</span>
+          <span>✉ healthcaremedmix@gmail.com</span>
           <span>📞 +91 81782 19164</span>
         </div>
         <div class="top-bar-hours">
@@ -79,10 +79,11 @@
         <h2 style="margin-top: 0">We are here to help</h2>
         <p>
           <strong>Registered Office:</strong><br />
-          F-3, Sultanpuri, Nangloi, Delhi – 110041
+          BLK-F3, Sultanpuri, Nangloi, New Delhi,
+            West Delhi - 110041
         </p>
         <p><strong>Phone:</strong> +91 81782 19164</p>
-        <p><strong>Email:</strong> medmixprivatelimited@gmail.com</p>
+        <p><strong>Email:</strong> healthcaremedmix@gmail.com</p>
 
         <h3 style="margin-top: 30px">Service Areas</h3>
         <p>
@@ -186,11 +187,11 @@
         <div class="footer-col contact-col">
           <h4>Contact Us</h4>
           <p>
-            <i class="fas fa-map-marker-alt"></i> BLK-F3, Nangloi, New Delhi,
+            <i class="fas fa-map-marker-alt"></i> BLK-F3, Sultanpuri, Nangloi, New Delhi,
             West Delhi - 110041
           </p>
           <p><i class="fas fa-phone"></i> +91 81782 19164</p>
-          <p><i class="fas fa-envelope"></i> medmixprivatelimited@gmail.com</p>
+          <p><i class="fas fa-envelope"></i> healthcaremedmix@gmail.com</p>
 
           <div class="social-icons">
             <a href="#"><i class="fab fa-facebook-f"></i></a>
