--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <div class="top-bar">
             <div class="top-bar-contact">
-                <span>✉ medmixprivatelimited@gmail.com</span>
+                <span>✉ healthcaremedmix@gmail.com</span>
                 <span>📞 +91 81782 19164</span>
             </div>
             <div class="top-bar-hours">
@@ -59,6 +59,39 @@
         <h2>Our Objective</h2>
         <p>Our objective is to ensure compassionate care, medical support, and trained healthcare manpower for those in need.</p>
     </div>
+    <section class="leadership-section">
+        <div class="container">
+            <h2 style="text-align: center; margin-bottom: 40px;">Meet Our Directors</h2>
+            
+            <div class="leaders-grid">
+                
+                <div class="leader-card">
+                    <div class="leader-img-container">
+                        <img src="assets/images/rinku-verma.jpg" alt="Rinku Verma" class="leader-img">
+                    </div>
+                    <div class="leader-info">
+                        <h3>Rinku Verma</h3>
+                        <span class="leader-title">Director</span>
+                        <div class="leader-line"></div>
+                        <p>Leading Medmix with a vision to provide accessible, high-quality healthcare to every home in Delhi NCR.</p>
+                    </div>
+                </div>
+
+                <div class="leader-card">
+                    <div class="leader-img-container">
+                        <img src="assets/images/khusboo-verma.jpg" alt="Khusboo Verma" class="leader-img">
+                    </div>
+                    <div class="leader-info">
+                        <h3>Khusboo Verma</h3>
+                        <span class="leader-title">Co-Director</span>
+                        <div class="leader-line"></div>
+                        <p>Dedicated to ensuring operational excellence and compassionate care in all our nursing services.</p>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
     <div class="container" style="margin-top: 50px; text-align: center;">
         <h2>Live Updates from Our Caregivers</h2>
         <p style="color: var(--text-light); margin-bottom: 40px;">See how our team is making a difference across Delhi NCR every single day.</p>
@@ -167,11 +200,11 @@
         <div class="footer-col contact-col">
           <h4>Contact Us</h4>
           <p>
-            <i class="fas fa-map-marker-alt"></i> BLK-F3, Nangloi, New Delhi,
+            <i class="fas fa-map-marker-alt"></i> BLK-F3, Sultanpuri, Nangloi, New Delhi,
             West Delhi - 110041
           </p>
           <p><i class="fas fa-phone"></i> +91 81782 19164</p>
-          <p><i class="fas fa-envelope"></i> medmixprivatelimited@gmail.com</p>
+          <p><i class="fas fa-envelope"></i> healthcaremedmix@gmail.com</p>
 
           <div class="social-icons">
             <a href="#"><i class="fab fa-facebook-f"></i></a>
