--- a/services.html
+++ b/services.html
@@ -11,7 +11,7 @@
     <header>
         <div class="top-bar">
             <div class="top-bar-contact">
-                <span>✉ medmixprivatelimited@gmail.com</span>
+                <span>✉ healthcaremedmix@gmail.com</span>
                 <span>📞 +91 81782 19164</span>
             </div>
             <div class="top-bar-hours">
@@ -48,7 +48,7 @@
     </section>
 
     <div class="container">
-        <p style="text-align: center; font-size: 1.1rem; color: #555;">Click on any service below to learn more about our specialized care plans.</p>
+        <p style="text-align: center; font-size: 1.5rem; color: #b11d1d; text-shadow: 0px 0.5px;">Click on any service below to learn more about our specialized care plans.</p>
 
         <div class="service-grid">
             <a href="assets/micro-pages/mother-baby-care.html" class="service-card">
@@ -60,7 +60,7 @@
             </a>
 
             <a href="assets/micro-pages/patient-care.html" class="service-card">
-                <img src="patient-care.jpg" alt="Patient Care" class="service-img">
+                <img src="assets/images/LOGOS/patient-care.jpg" alt="Patient Care" class="service-img">
                 <div class="service-content">
                     <h3>🧑‍⚕️ Patient & Nursing Care</h3>
                     <p>ICU trained staff, B.Sc Nurses, and dedicated caretakers for home recovery.</p>
@@ -68,7 +68,7 @@
             </a>
 
             <a href="assets/micro-pages/icu-equipment.html" class="service-card">
-                <img src="icu-equip.jpg" alt="ICU Equipment" class="service-img">
+                <img src="assets/images/LOGOS/icu-equip.jpg" alt="ICU Equipment" class="service-img">
                 <div class="service-content">
                     <h3>⚙️ ICU & Medical Equipment</h3>
                     <p>Home ICU setups, Oxygen Concentrators, BiPAP machines, and Hospital beds.</p>
@@ -76,7 +76,7 @@
             </a>
 
             <a href="assets/micro-pages/old-age-care.html" class="service-card">
-                <img src="old-age-care.jpg" alt="Old Age Care" class="service-img">
+                <img src="assets/images/LOGOS/old-age-care.jpg" alt="Old Age Care" class="service-img">
                 <div class="service-content">
                     <h3>👴 Old Age Home Care</h3>
                     <p>24×7 Elderly Care, Assisted Living Support, and dedicated Dementia & Paralysis Care.</p>
@@ -146,11 +146,11 @@
         <div class="footer-col contact-col">
           <h4>Contact Us</h4>
           <p>
-            <i class="fas fa-map-marker-alt"></i> BLK-F3, Nangloi, New Delhi,
+            <i class="fas fa-map-marker-alt"></i> BLK-F3, Sultanpuri, Nangloi, New Delhi,
             West Delhi - 110041
           </p>
           <p><i class="fas fa-phone"></i> +91 81782 19164</p>
-          <p><i class="fas fa-envelope"></i> medmixprivatelimited@gmail.com</p>
+          <p><i class="fas fa-envelope"></i> healthcaremedmix@gmail.com</p>
 
           <div class="social-icons">
             <a href="#"><i class="fab fa-facebook-f"></i></a>
