--- a/assets/micro-pages/patient-care.html
+++ b/assets/micro-pages/patient-care.html
@@ -11,7 +11,7 @@
     <header>
         <div class="top-bar">
             <div class="top-bar-contact">
-                <span>✉ medmixprivatelimited@gmail.com</span>
+                <span>✉ healthcaremedmix@gmail.com</span>
                 <span>📞 +91 81782 19164</span>
             </div>
             <div class="top-bar-hours">
@@ -48,7 +48,8 @@
     </section>
 
     <div class="container">
-        <a href="../../services.html" style="color: var(--primary-red); text-decoration: none; font-weight: bold; display: inline-block; margin-bottom: 20px;">← Back to All Services</a>
+        <a href="../../services.html" class="back-link-pill">
+        <span class="arrow">←</span> Back</a>
         
         <p style="font-size: 1.1rem; line-height: 1.8;">We provide trained and experienced healthcare staff for home and facility-based care. Whether you need post-operative monitoring or long-term bedridden assistance, our nursing staff is equipped to deliver hospital-grade care at home.</p>
 
@@ -66,6 +67,7 @@
             <a href="../../contact.html"><button class="submit-btn" style="width: auto; padding: 12px 30px; font-size: 1.1rem;">Request Staff</button></a>
         </div>
     </div>
+    <button id="backToTop" title="Go to top">↑</button>
 
     <footer class="premium-footer">
       <div class="footer-container">
@@ -111,11 +113,11 @@
         <div class="footer-col contact-col">
           <h4>Contact Us</h4>
           <p>
-            <i class="fas fa-map-marker-alt"></i> BLK-F3, Nangloi, New Delhi,
+            <i class="fas fa-map-marker-alt"></i> BLK-F3, Sultanpuri, Nangloi, New Delhi,
             West Delhi - 110041
           </p>
           <p><i class="fas fa-phone"></i> +91 81782 19164</p>
-          <p><i class="fas fa-envelope"></i> medmixprivatelimited@gmail.com</p>
+          <p><i class="fas fa-envelope"></i> healthcaremedmix@gmail.com</p>
 
           <div class="social-icons">
             <a href="#"><i class="fab fa-facebook-f"></i></a>
