--- a/assets/micro-pages/old-age-care.html
+++ b/assets/micro-pages/old-age-care.html
@@ -9,39 +9,43 @@
 <body>
 
    <header>
-        <div class="top-bar">
-            <div class="top-bar-contact">
-                <span>✉ healthcaremedmix@gmail.com</span>
-                <span>📞 +91 81782 19164</span>
-            </div>
-            <div class="top-bar-hours">
-                <span>🕒 24/7 Services Across Delhi NCR</span>
-            </div>
-        </div>
+    <div class="top-bar">
+      <div class="top-bar-contact">
+        <span>✉ healthcaremedmix@gmail.com</span>
+        <span>📞 +91 81782 19164</span>
+      </div>
+      <div class="top-bar-hours">
+        <span>🕒 24/7 Services Across Delhi NCR</span>
+      </div>
+    </div>
 
-        <div class="nav-container">
-           <a href="../../index.html"><img src="../images/LOGOS/MEdimix logo.jpeg" alt="Medmix Logo" class="logo-img"></a>
-           <div class="menu-toggle" onclick="toggleMenu()">☰</div>
-             <nav>
-                <ul>
-                    <li><a href="../../index.html" class="nav-link">Home</a></li>
-                    
-                    <li class="dropdown">
-                        <a href="../../services.html" class="nav-link">Services ▾</a>
-                        <ul class="dropdown-menu">
-                            <li><a href="mother-baby-care.html">Mother & Baby Care</a></li>
-                            <li><a href="patient-care.html">Patient & Nursing Care</a></li>
-                            <li><a href="icu-equipment.html">ICU & Medical Equipment</a></li>
-                            <li><a href="old-age-care.html">Old Age Home Care</a></li>
-                        </ul>
-                    </li>
+    <div class="nav-container">
+      <a href="../../index.html"><img src="../images/LOGOS/MEdimix logo.jpeg" alt="Medmix Logo" class="logo-img"></a>
+      <div class="menu-toggle" onclick="toggleMenu()">☰</div>
 
-                    <li><a href="../../training.html" class="nav-link">Training</a></li>
-                    <li><a href="../../contact.html" class="nav-cta">Get in Touch</a></li>
+      <nav>
+        <ul>
+          <li><a href="../../index.html" class="nav-link">Home</a></li>
+
+          <li class="dropdown">
+            <div class="menu-row">
+              <a href="../../services.html" class="nav-link">Services</a>
+              <div class="arrow-btn">▼</div>
+              <div>
+                <ul class="dropdown-menu">
+                  <li><a href="mother-baby-care.html">Mother & Baby Care</a></li>
+                  <li><a href="patient-care.html">Patient & Nursing Care</a></li>
+                  <li><a href="icu-equipment.html">ICU & Medical Equipment</a></li>
+                  <li><a href="old-age-care.html">Old Age Home Care</a></li>
                 </ul>
-            </nav>
-        </div>
-    </header>
+          </li>
+
+          <li><a href="../../training.html" class="nav-link">Training</a></li>
+          <li><a href="../../contact.html" class="nav-cta">Get in Touch</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 
     <section class="inner-hero" style="background-image: linear-gradient(rgba(0, 51, 102, 0.6), rgba(0, 51, 102, 0.6)), url('old-age-hero.jpg');">
         <h1>Old Age Home Care Services</h1>
