--- a/assets/micro-pages/old-age-care.html
+++ b/assets/micro-pages/old-age-care.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Old Age Home Care | Medmix</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="../../style.css">
 </head>
 <body>
@@ -70,6 +71,26 @@
             <a href="../../contact.html"><button class="submit-btn" style="width: auto; padding: 12px 30px; font-size: 1.1rem;">Consult Our Team</button></a>
         </div>
     </div>
+
+    <!--This social medial floating icon FWI buttons-->
+  <div class="social-fab-container">
+    <a href="https://instagram.com/" target="_blank" class="fab-btn fab-social fab-instagram">
+        <i class="fab fa-instagram"></i>
+    </a>
+    
+    <a href="https://facebook.com/" target="_blank" class="fab-btn fab-social fab-facebook">
+        <i class="fab fa-facebook-f"></i>
+    </a>
+    
+    <a href="https://wa.me/919876543210" target="_blank" class="fab-btn fab-social fab-whatsapp">
+        <i class="fab fa-whatsapp"></i>
+    </a>
+
+    <button class="fab-btn fab-toggle" id="socialFabToggle">
+        <i class="fas fa-plus"></i>
+    </button>
+</div>
+
     <button id="backToTop" title="Go to top">↑</button>
 
    <footer class="premium-footer">
